--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -2,3 +2,4 @@ FROM almalinux:9
 LABEL COURSE="DevOps" \
       TRAINER="Sivakumar" \
       DURATION="2 months" \
+      com.joindevops.dockerfile.author="siva@joindevops.com" \
