--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 ENV COURSE="DevOps" \
       TRAINER="Sivakumar" \
-      DURATION="2 months" \
+      DURATION="2 months" 
 CMD ["sleep", "1000"]
