--- a/USER/Dockerfile
+++ b/USER/Dockerfile
@@ -1,8 +1,9 @@
 FROM almalinux:9
 #CMD ["ping", "google.com"]
 RUN dnf install git -y
-RUN useradd sivakumar
+RUN useradd -m sivakumar
 
 USER sivakumar    # running the container with normal user sivakumar
+WORKDIR /home/sivakumar
 CMD ["google.com"]
 ENTRYPOINT ["ping"]
