--- a/USER/Dockerfile
+++ b/USER/Dockerfile
@@ -1,9 +1,8 @@
 FROM almalinux:9
-#CMD ["ping", "google.com"]
+#CMD ["ping","google.com"]
 RUN dnf install git -y
-RUN useradd -m sivakumar
+RUN useradd sivakumar
 
-USER sivakumar    # running the container with normal user sivakumar
-WORKDIR /home/sivakumar
+USER sivakumar
 CMD ["google.com"]
 ENTRYPOINT ["ping"]
