--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,6 +1,8 @@
-FROM almalinux:9
-ENV course="DevOps" \
-    duration="2 months" 
-ARG trainer="Sivakumar"
-RUN echo "Hi, course is: ${course}, duration is: ${duration}, trainer is: ${trainer}"
+ARG version
+FROM almalinux:${version:-9}
+ENV course="devops" \
+    duration="120hrs"
+ARG trainer="sivakumar"
+ENV trainer=$trainer
+RUN echo "Hi, Course is: ${course}, duration is: ${duration}, trainer is: ${trainer}, version: ${version}"
 CMD ["sleep", "1000"]
